# contentforge-backend

./: .env.example  pyproject.toml
app/: main.py
app/api/v1/: transform.py
app/core/: config.py  prompts.py
app/models/: schemas.py
app/services/: llm.py  llm_anthropic.py  llm_gemini.py  scraper.py
